@@ -8,11 +8,13 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
@@ -30,6 +32,7 @@ import ai.timefold.jpyinterpreter.opcodes.Opcode;
 import ai.timefold.jpyinterpreter.opcodes.OpcodeWithoutSource;
 import ai.timefold.jpyinterpreter.opcodes.SelfOpcodeWithoutSource;
 import ai.timefold.jpyinterpreter.opcodes.descriptor.GeneratorOpDescriptor;
+import ai.timefold.jpyinterpreter.opcodes.variable.LoadFastAndClearOpcode;
 import ai.timefold.jpyinterpreter.types.BuiltinTypes;
 import ai.timefold.jpyinterpreter.types.PythonLikeFunction;
 import ai.timefold.jpyinterpreter.types.PythonLikeType;
@@ -175,7 +178,7 @@ public class PythonBytecodeToJavaBytecodeTranslator {
         Method methodWithoutGenerics = getFunctionalInterfaceMethod(javaFunctionalInterfaceType);
         MethodDescriptor methodDescriptor = new MethodDescriptor(javaFunctionalInterfaceType,
                 methodWithoutGenerics,
-                List.of());
+                Collections.emptyList());
         Class<T> compiledClass = forceTranslatePythonBytecodeToGeneratorClass(pythonCompiledFunction, methodDescriptor,
                 methodWithoutGenerics, false);
         return FunctionImplementor.createInstance(new PythonLikeTuple(), new PythonLikeDict(),
@@ -252,7 +255,7 @@ public class PythonBytecodeToJavaBytecodeTranslator {
                 null);
 
         translatePythonBytecodeToMethod(methodDescriptor, internalClassName, methodVisitor, pythonCompiledFunction,
-                isPythonLikeFunction, Integer.MAX_VALUE, isVirtual); // TODO: Use actual python version
+                isPythonLikeFunction, isVirtual);
 
         classWriter.visitEnd();
 
@@ -296,7 +299,7 @@ public class PythonBytecodeToJavaBytecodeTranslator {
                 null);
 
         translatePythonBytecodeToMethod(methodDescriptor, internalClassName, methodVisitor, pythonCompiledFunction,
-                isPythonLikeFunction, Integer.MAX_VALUE, isVirtual); // TODO: Use actual python version
+                isPythonLikeFunction, isVirtual);
 
         String withoutGenericsSignature = Type.getMethodDescriptor(methodWithoutGenerics);
         if (!withoutGenericsSignature.equals(methodDescriptor.getMethodDescriptor())) {
@@ -991,7 +994,7 @@ public class PythonBytecodeToJavaBytecodeTranslator {
     }
 
     private static void translatePythonBytecodeToMethod(MethodDescriptor method, String className, MethodVisitor methodVisitor,
-            PythonCompiledFunction pythonCompiledFunction, boolean isPythonLikeFunction, int pythonVersion, boolean isVirtual) {
+            PythonCompiledFunction pythonCompiledFunction, boolean isPythonLikeFunction, boolean isVirtual) {
         // Apply Method Adapters, which reorder try blocks and check the bytecode to ensure it valid
         methodVisitor = MethodVisitorAdapters.adapt(methodVisitor, method);
 
@@ -1057,6 +1060,7 @@ public class PythonBytecodeToJavaBytecodeTranslator {
 
         FlowGraph flowGraph = FlowGraph.createFlowGraph(functionMetadata, initialStackMetadata, opcodeList);
         List<StackMetadata> stackMetadataForOpcodeIndex = flowGraph.getStackMetadataForOperations();
+
         writeInstructionsForOpcodes(functionMetadata, stackMetadataForOpcodeIndex, opcodeList);
 
         methodVisitor.visitLabel(end);
@@ -1140,6 +1144,19 @@ public class PythonBytecodeToJavaBytecodeTranslator {
                     });
         }
 
+        var requiredNullVariableSet = new TreeSet<Integer>();
+        for (Opcode opcode : opcodeList) {
+            if (opcode instanceof LoadFastAndClearOpcode loadAndClearOpcode) {
+                requiredNullVariableSet.add(loadAndClearOpcode.getInstruction().arg());
+            }
+        }
+
+        for (var requiredNullVariable : requiredNullVariableSet) {
+            methodVisitor.visitInsn(Opcodes.ACONST_NULL);
+            methodVisitor.visitVarInsn(Opcodes.ASTORE,
+                    stackMetadataForOpcodeIndex.get(0).localVariableHelper.getPythonLocalVariableSlot(requiredNullVariable));
+        }
+
         for (int i = 0; i < opcodeList.size(); i++) {
             StackMetadata stackMetadata = stackMetadataForOpcodeIndex.get(i);
             PythonBytecodeInstruction instruction = pythonCompiledFunction.instructionList.get(i);
@@ -1148,7 +1165,7 @@ public class PythonBytecodeToJavaBytecodeTranslator {
                 Label label = exceptionTableTargetLabelMap.get(instruction.offset());
                 methodVisitor.visitLabel(label);
             }
-            exceptionTableTryBlockMap.getOrDefault(instruction.offset(), List.of()).forEach(Runnable::run);
+            exceptionTableTryBlockMap.getOrDefault(instruction.offset(), Collections.emptyList()).forEach(Runnable::run);
 
             if (instruction.isJumpTarget() || bytecodeCounterToLabelMap.containsKey(instruction.offset())) {
                 Label label = bytecodeCounterToLabelMap.computeIfAbsent(instruction.offset(), offset -> new Label());
@@ -1157,7 +1174,7 @@ public class PythonBytecodeToJavaBytecodeTranslator {
 
             runAfterLabelAndBeforeArgumentors.accept(instruction);
 
-            bytecodeIndexToArgumentorsMap.getOrDefault(instruction.offset(), List.of()).forEach(Runnable::run);
+            bytecodeIndexToArgumentorsMap.getOrDefault(instruction.offset(), Collections.emptyList()).forEach(Runnable::run);
 
             if (exceptionTableStartLabelMap.containsKey(instruction.offset())) {
                 Label label = exceptionTableStartLabelMap.get(instruction.offset());
