@@ -26,6 +26,7 @@ import ai.timefold.jpyinterpreter.implementors.JavaInterfaceImplementor;
 import ai.timefold.jpyinterpreter.opcodes.AbstractOpcode;
 import ai.timefold.jpyinterpreter.opcodes.Opcode;
 import ai.timefold.jpyinterpreter.opcodes.SelfOpcodeWithoutSource;
+import ai.timefold.jpyinterpreter.opcodes.controlflow.ReturnConstantValueOpcode;
 import ai.timefold.jpyinterpreter.opcodes.controlflow.ReturnValueOpcode;
 import ai.timefold.jpyinterpreter.opcodes.object.DeleteAttrOpcode;
 import ai.timefold.jpyinterpreter.opcodes.object.LoadAttrOpcode;
@@ -788,7 +789,7 @@ public class PythonClassTranslator {
                         function.getReturnType().orElse(BuiltinTypes.BASE_TYPE),
                         function.totalArgCount() > 0
                                 ? function.getParameterTypes().subList(1, function.getParameterTypes().size())
-                                : List.of()));
+                                : Collections.emptyList()));
     }
 
     private static void createStaticMethod(PythonLikeType pythonLikeType, ClassWriter classWriter, String internalClassName,
@@ -1393,6 +1394,9 @@ public class PythonClassTranslator {
             List<PythonLikeType> possibleReturnTypeList = new ArrayList<>();
             flowGraph.visitOperations(ReturnValueOpcode.class, (opcode, stackMetadata) -> {
                 possibleReturnTypeList.add(stackMetadata.getTOSType());
+            });
+            flowGraph.visitOperations(ReturnConstantValueOpcode.class, (opcode, stackMetadata) -> {
+                possibleReturnTypeList.add(opcode.getConstant(pythonCompiledFunction).$getGenericType());
             });
 
             return possibleReturnTypeList.stream()
